Consistently green check mark, closes https://github.com/tomayac/pwa-feature-detector/issues/4

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
       }
       .support {
         text-align: center;
+        color: #00c500;
       }
       #userAgent {
         border: solid 1px #ff8032;
