Add link to paper.

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,9 @@
   <body>
     <h1>Progressive Web App</h1>
     <h2>🕵️ Feature Detector</h2>
+    <p>
+      Read the corresponding <a href="https://ai.google/research/pubs/pub46739">research paper</a>.
+    </p>
     <div id="features">
       <div id="userAgent"></div>
       <table>
